# TP_2

./: CMakeLists.txt
Ej1/examples/: data.csv  ejec  main.cpp
Ej1/includes/: Pokedex.hpp  Pokemon.hpp  PokemonInfo.hpp
Ej1/src/: Pokedex.cpp  Pokemon.cpp  PokemonInfo.cpp
Ej2/examples/: ejec  main.cpp
Ej2/includes/: Dron.hpp
Ej2/src/: Dron.cpp
Ej3/examples/: main  main.cpp
